Eliminated old bootstrap! Fixed a few broken UI features

--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -20,13 +20,17 @@ body {
     padding-left: 10px;
 }
 
+.nav-top-spacing {
+    padding-top: 15px !important;
+}
+
 .yroom {
     background-color: #C7FE74;
     padding: 15px 32px;
     font-family: "Roboto Mono", Courier, monospace;
     border-radius: 12px;
     display: inline-flex;
-    font-size: 50px !important;
+    font-size: 30px !important;
     margin: 10px 10px;
     color: white !important;
     text-decoration: none;
@@ -37,7 +41,7 @@ body {
     font-family: "Roboto Mono", Courier, monospace !important;
     border-radius: 12px;
     display: inline-flex;
-    font-size: 50px !important;
+    font-size: 30px !important;
     margin: 10px 10px;
     color: white !important;
     text-decoration: none;
